--- a/style.css
+++ b/style.css
@@ -1,6 +1,25 @@
 :root{
     font-size: 16px;
     font-family: "Ubuntu Condensed", sans-serif;
+    --text-primary: black;
+    --text-secondary: white;
+    --bg-primary: #23232e;
+    --bg-secondary:#141418;
+    --transition-speed: 1s;
+    --drawer-color: #0ea5e9;
+    --drawer-width: clamp(210px, 22vw, 325px);
+    --nav-bg-1: #f8f8f8;
+    --nav-color-1: #c9c9c9;
+    --nav-color-2: #62daff6e;
+    --blue-1: #084c61;
+    --gh-avatar1: url('https://github.com/eshan-sharma.png');
+    --gh-avatar2: url('https://github.com/AVS1508.png');
+    --gh-avatar3: url('https://github.com/imkaka.png');
+    --gh-avatar4: url('https://github.com/bobmatyas.png');
+    --gh-avatar5: url('https://github.com/grazziotti.png');
+    --content-gray: rgb(235,235,235);
+    --transition-notDrawer: margin-left 0.4s ease-in;
+    --transition-drawer: width 0.4s ease-in;
 }
 img{
     height: 24px;
