setting up the grid layout

--- a/style.css
+++ b/style.css
@@ -21,6 +21,19 @@
     --transition-notDrawer: margin-left 0.4s ease-in;
     --transition-drawer: width 0.4s ease-in;
 }
+
+body{
+    width: 100vw;
+    height: 100vh; 
+    display: grid;
+    grid-template-areas: 
+    "drawer nav nav nav"
+    "drawer content content content";
+    grid-template-rows: 0.8fr 4fr;
+    grid-template-columns: 5rem 1fr 1fr 1fr;
+}
+
+
 img{
     height: 24px;
 }
