--- a/style.css
+++ b/style.css
@@ -90,9 +90,34 @@ body{
     padding-left: 10px;
     padding-top: 10px;
 }
+/* Navbar Setting */
 .navbar{
     grid-area: nav;
     transition: var(--transition-notDrawer);
+    background-color: var(--nav-bg-1);
+    padding: 1.5rem 3rem;
+    border-bottom: 2px solid rgb(219,219,219);
+}
+.topNav{
+    display: grid;
+    grid-template-columns: 1fr max-content;
+    margin-bottom: 2.5rem;
+}
+.search{
+    display: flex;
+    align-items: center;
+    margin-right: auto;
+    width: 100%;
+}
+.search > input{
+    display: inline-block;
+    border: 0;
+    background-color: var(--nav-color-1);
+    padding: 0.5rem 1.5rem;
+    outline-color: var(--blue-1);
+    margin-left: 1.25rem;
+    border-radius: 5px;
+    width: min(80%, 600px);
 }
 .content{
     grid-area: content;
