--- a/style.css
+++ b/style.css
@@ -118,8 +118,70 @@ body{
     margin-left: 1.25rem;
     border-radius: 5px;
     width: min(80%, 600px);
+    padding-right: 20px;
+}
+.navbar .account{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    font-size: 1.2rem;
+    font-weight: 800;
+}
+.gh-avatar{
+    background: var(--gh-avatar1) center center/cover no-repeat;
+    border-radius: 50%;
+}
+.account .gh-avatar{
+    margin: 0 1rem 0 2.5rem;
+    height: 40px;
+    width: 40px;
 }
 .content{
     grid-area: content;
     transition: var(--transition-notDrawer);
+}
+img{
+    cursor: pointer;
+}
+
+
+.bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.profile{
+    display: flex;
+    align-items: center;
+    gap:1rem;
+}
+.profile .gh-avatar{
+    width: 75px;
+    height: 75px;
+}
+.greeting{
+    font-weight: 800;
+    margin-bottom: 0.4rem;
+}
+.profile .name{
+    font-size: 1.6rem;
+    font-weight: 800;
+}
+.buttons{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 2rem;
+}
+
+.btn{
+    background-color: var(--drawer-color);
+    color: var(--text-secondary);
+    font-weight: 800;
+    padding: .5rem 1.8rem;
+    border-radius: 5px;
+    font-size: 20px;
+    border: 1px solid grey;
+    cursor: pointer;
 }
