--- a/style.css
+++ b/style.css
@@ -136,10 +136,6 @@ body{
     height: 40px;
     width: 40px;
 }
-.content{
-    grid-area: content;
-    transition: var(--transition-notDrawer);
-}
 img{
     cursor: pointer;
 }
@@ -184,4 +180,69 @@ img{
     font-size: 20px;
     border: 1px solid grey;
     cursor: pointer;
+}
+/* Main Content */
+.content{
+    grid-area: content;
+    transition: var(--transition-notDrawer);
+    background-color: var(--content-gray);
+    display: grid;
+    padding: 2rem;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: min-content 1fr;
+    gap: 2rem;
+    grid-template-areas: 
+    "project announcements" 
+    "projects trending";
+    overflow: auto;
+    height: 100%;
+}
+
+.content h3{
+    font-size: 1.3rem;
+    font-weight: 600px;
+    margin-bottom: 0.8rem;
+}
+.projects{
+    grid-area: projects;
+}
+.projects .cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    grid-auto-rows: 250px;
+    gap: 2rem;
+    padding-bottom: 2rem;
+}
+.projects .card{
+    background-color: var(--nav-color-2);
+    border-left: 10px solid orange;
+    display: flex;
+    flex-direction: column;
+}
+.projects .card-title{
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-bottom: 0.2rem;
+}
+.projects .card-text{
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.projects .icons{
+    margin-top: auto;
+    align-self: flex-end;
+    display: flex;
+    justify-content: flex-end;
+    gap: 1.4rem;
+    align-items: center;
+    padding-bottom: 5px;
+    padding-right: 5px;
+}
+.card{
+    background-color: rgba(45,187,187, .459);
+    padding: 2rem;
+    border-radius: 0.6rem;
+    box-shadow: 0 10px 15px -3px rgb(0 0 0/.1), 0 4px 6px -4px rgb(0 0 0/.1);
 }
