--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ img{
     grid-template-rows: min-content 1fr;
     gap: 2rem;
     grid-template-areas: 
-    "project announcements" 
+    "projects announcements" 
     "projects trending";
 }
 
